# agents

./: .gitignore  AGENTS.md  README.md
devtools/: .gitignore  CLI_TOOLS.md  README.md  aw-plugins.yaml  dt-plugins.yaml  ecosystem.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
devtools/common/cli/: package.json  tsconfig.tsbuildinfo
devtools/common/cli-plugin-debate/: package.json  tsconfig.tsbuildinfo
devtools/common/cli-plugin-debate/src/lib/: helpers.ts  services.ts
devtools/common/cli-plugin-docs/: tsconfig.tsbuildinfo
devtools/common/cli-plugin-docs/src/lib/: db.ts  helpers.ts
devtools/common/cli-shared/: tsconfig.tsbuildinfo
devtools/common/cli-shared/src/: index.ts
devtools/common/cli-shared/src/helpers/: content.ts  index.ts
devtools/common/cli-shared/src/http/: client.ts
devtools/common/cli-shared/src/mcp/: index.ts  response.ts
devtools/common/cli-shared/src/services/: index.ts  pm2.ts
devtools/common/cli/devtool/: pyproject.toml  ruff.toml
devtools/common/cli/devtool/aweave/: __init__.py
devtools/common/cli/devtool/tests/: test_docs.py
devtools/common/debate-machine/src/: index.ts  machine.ts  utils.ts
devtools/common/debate-server/: ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json
devtools/common/debate-server/.aweave/: debate.db-shm  debate.db-wal
devtools/common/debate-server/src/: config.ts  db.ts  errors.ts  http.ts  index.ts  lockService.ts  services.ts  stateMachine.ts  types.ts  websocket.ts
devtools/common/debate-web/: package-lock.json  package.json
devtools/common/debate-web/components/debate/: action-area.tsx  argument-card.tsx  argument-list.tsx
devtools/common/debate-web/hooks/: use-debate.ts  use-debates-list.ts
devtools/common/debate-web/lib/: api.ts  types.ts
devtools/common/nestjs-debate/: package.json
devtools/common/nestjs-debate/src/: argument.service.ts  debate-prisma.service.ts  debate.controller.ts  debate.gateway.ts  debate.module.ts  debate.service.ts  errors.ts  index.ts  state-machine.ts  types.ts  ws-types.ts
devtools/common/nestjs-debate/src/dto/: argument.dto.ts  debate.dto.ts  error.dto.ts  index.ts  request.dto.ts  response.dto.ts
devtools/common/server/: package.json
devtools/common/server/src/: app.module.ts  main.ts
devtools/common/server/src/scripts/: generate-openapi.ts
devtools/nab/cli/confluence/: pyproject.toml
devtools/scripts/: generate-registry.py  install-all.sh
devtools/tinybots/cli-plugin-bitbucket/: package.json  tsconfig.tsbuildinfo
devtools/tinybots/cli-plugin-bitbucket/src/lib/: client.ts  models.ts
devtools/tinybots/cli/bitbucket/: pyproject.toml
devtools/tinybots/cli/bitbucket/tinybots/: __init__.py
devtools/tinybots/local/: Justfile  docker-compose.yaml
devtools/tinybots/playwright/: package.json  playwright.config.ts  playwright.seed.config.ts
devtools/tinybots/playwright/scripts/: open-academy.js
devtools/tinybots/playwright/tests/: academy.login.spec.ts  academy.salesOrderShipmentInformationReport.graphql.spec.ts  academy.smoke.spec.ts  academy.tessaOrderStatusReport.graphql.spec.ts  seed.academy-auth.spec.ts
devtools/vocalmeet/local/: docker-compose-assessment.yaml
devtools/vocalmeet/local/justfiles/: services.just
(+192 files in other folders)
