[project]
name = "devtools-workspace"
version = "0.1.0"
description = "Unified development tools monorepo"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.21.1",
    "aweave",
    "nab-confluence",
    "tinybots-bitbucket",
]

[tool.uv.workspace]
members = [
    "common/cli/devtool",
    "nab/cli/confluence",
    "tinybots/cli/bitbucket"
]

[tool.uv.sources]
aweave = { workspace = true }
nab-confluence = { workspace = true }
tinybots-bitbucket = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.12.4", # Ruff handles both linting and formatting
    "pytest",
]
