[project]
name = "aweave"
version = "0.1.0"
description = "Unified CLI for development tools"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.21.1",
    "pyyaml>=6.0",
]

[project.scripts]
aw = "aweave.core.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aweave"]
