[project]
name = "nab-confluence"
version = "0.1.0"
description = "Confluence domain tools"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.1",
    "dt",
]

[project.entry-points."dt.plugins"]
confluence = "nab.confluence.cli:app"

[tool.uv.sources]
dt = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nab"]
