[project]
name = "nab-confluence"
version = "0.1.0"
description = "Confluence domain tools"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.21.1",
    "aweave",
]

[project.entry-points."aweave.plugins"]
confluence = "nab.confluence.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nab"]
