[project]
name = "tinybots-bitbucket"
version = "0.1.0"
description = "TinyBots Bitbucket tools"
requires-python = ">=3.13"
dependencies = [
    "aweave",
]

[project.entry-points."aw.plugins"]
tinybots-bitbucket = "tinybots.bitbucket.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinybots"]

[tool.uv.sources]
aweave = { workspace = true }
